fix default selected language on ios

--- a/src/styles/Output.css
+++ b/src/styles/Output.css
@@ -8,6 +8,7 @@
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
   direction: rtl;
   background: #fff;
   cursor: pointer;
